Updating notebook links

--- a/01_Importing_LAS_file.ipynb
+++ b/01_Importing_LAS_file.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNw9s7YYzirLlm1XNnfgpZd",
+      "authorship_tag": "ABX9TyOlYWmBLhEmkZSTLo+FroUx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,7 @@
         "\n",
         "Welcome to the first notebook created of the well series. The main goal of this notebook is to show how we can import a LAS file, with the well data, using the LASIO package. Then, in the end, we will learn a simple way to visualize this data that has been imported.\n",
         "\n",
-        "**IMPORTANT:** To learn how to import DLIS file look for the notebook: \"name of the notebook\".\n",
+        "**IMPORTANT:** To learn how to import DLIS file look for the notebook: [Importing DLIS file](https://github.com/rmotadutra/welllogseries/blob/main/0X_Importing_DLIS_file.ipynb).\n",
         "\n",
         "> ## Requirements\n",
         "\n",
@@ -155,7 +155,7 @@
         "outputId": "f54ce3ad-0490-44b8-9398-daceead2ab63"
       },
       "source": [
-        "#download the LAS file to the notebook\n",
+        "#downloading the LAS file to the notebook\n",
         "!wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1kILe1p92lidoihfF2hvlMv5wkrsp9oCR' -O AA-13-30-091-08W4-0.las"
       ],
       "execution_count": null,
@@ -695,7 +695,7 @@
         "id": "yDlK6sGGqieL"
       },
       "source": [
-        "Now that we know how to access all the information present in a LAS file, it's possible to create plots to better view the well logs. For this, see the next notebook created: \"name of the matplotlib notebook\"."
+        "Now that we know how to access all the information present in a LAS file, it's possible to create plots to better view the well logs. For this, see the next notebook created: [Displaying LogPlots using Matplotlib](https://github.com/rmotadutra/welllogseries/blob/main/02_Displaying_LogPlots_using_Matplotlib.ipynb)."
       ]
     },
     {
