Correcting english texts

--- a/01_Importing_LAS_file.ipynb
+++ b/01_Importing_LAS_file.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOlYWmBLhEmkZSTLo+FroUx",
+      "authorship_tag": "ABX9TyPoOgcl+Pg7AfUM7C52V83b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -473,7 +473,7 @@
         "id": "Yb2mDO3Rj4kH"
       },
       "source": [
-        "However, until now, we have only access the LAS file metadata. From now on, we will see how to access the data of each curve present in the LAS file. The data from all the curves can be found in another property of the class, named \"data\"."
+        "However, until now, we have only accessed the LAS file metadata. From now on, we will see how to access the data of each curve present in the LAS file. The data from all the curves can be found in another property of the class, named \"data\"."
       ]
     },
     {
@@ -512,10 +512,10 @@
         "id": "0fT9OhwbmH6S"
       },
       "source": [
-        "The \"data\" property returns a numpy.ndarray type. This represents a array n dimensional, which in each dimension contains the data for each curve. However, it's dificult to know which one represents the gamma ray data, for example. Then, when we read the LAS file, the lasio package extends all the sections in properties of the class. Therefore, we can access the data for each curve from the mnemonic.\n",
+        "The \"data\" property returns a numpy.ndarray type. This represents an array n dimensional, which in each dimension contains the data for each curve. However, it's dificult to know which one represents the gamma ray data, for example. Then, when we read the LAS file, the lasio package extends all the sections in properties of the class. Therefore, we can access the data for each curve from the mnemonic.\n",
         "\n",
         "**IMPORTANT**\n",
-        "All the sections is extends to properties of the original class, where here we called \"well\". However, this properties returns other classes. For example, the result of the function \"well.curves\" is a class. So, it's important to give the exactly mnemonic to access the information of the curve."
+        "All the sections are extends to properties of the original class, where here we called \"well\". However, this properties returns other classes. For example, the result of the function \"well.curves\" is a class. So, it's important to give the exactly mnemonic to access the information of the curve."
       ]
     },
     {
